api login & and spilting docs api
