# src/routes/APIKey.route.js
@@ -11,4 +11,8 @@ route.post(
 	asyncHandler(APIKeyController.createAPIKey),
 )
 
+route.get('/', asyncHandler(APIKeyController.getListAPIKey))
+
+route.delete('/:id', asyncHandler(APIKeyController.removeAPIKey))
+
 module.exports = route
