# src/validators/user.validator.js
@@ -12,7 +12,15 @@ const userVerifyEmailSchema = z.object({
 	}),
 })
 
+const userLoginSchema = z.object({
+	body: z.object({
+		email: z.string().email(),
+		password: z.string(),
+	}),
+})
+
 module.exports = {
 	userRegisterSchema,
 	userVerifyEmailSchema,
+	userLoginSchema,
 }
